# rust_auth

./: Cargo.toml  README.md  diesel.toml  readme.md  schema.rs
migrations/2024-10-04-181500_add_is_active_to_users/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  tests.rs
